After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 728789 - Freebox TV channel working only with firewall deactivated
Freebox TV channel working only with firewall deactivated
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: GStreamer backend
3.12.x
Other Linux
: Normal minor
: ---
Assigned To: Maintainer alias for GStreamer component of Totem
Maintainer alias for GStreamer component of Totem
Depends on:
Blocks:
 
 
Reported: 2014-04-23 12:57 UTC by Rémi G.
Modified: 2014-04-30 12:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
backend: Better error message for RTSP blocked by firewall (1.70 KB, patch)
2014-04-24 09:49 UTC, Bastien Nocera
committed Details | Review

Description Rémi G. 2014-04-23 12:57:56 UTC
Trying to play any stream from the Freebox TV channel results in the following error:

> An error occured
>
> An audio or video stream is not handled due to missing codecs. You might need > to install additional plugins to be able to play some types of movies

And yet, this is not a codec issue but a firewall issue. If I deactivate the firewall using the following command, everything works fine:

  sudo systemctl stop firewalld

I face this issue with totem 3.12.0 on Fedora 20 with f20-gnome-3-12 copr enabled.
Comment 1 Bastien Nocera 2014-04-23 16:03:00 UTC
What's the error when reproducing the problem on the command-line?
Comment 2 Rémi G. 2014-04-23 16:43:15 UTC
There is no error message (actually no output at all) if I launch totem from a terminal and reproduce the problem.

I tried `totem --debug` to get more verbose output but it didn't help. Any parameter I should use?
Comment 3 Bastien Nocera 2014-04-24 09:49:43 UTC
Created attachment 275030 [details] [review]
backend: Better error message for RTSP blocked by firewall
Comment 4 Bastien Nocera 2014-04-24 09:51:21 UTC
A new error is the best we can do, you'll need to disable Fedora's firewall to stream RTSP videos:
systemctl stop firewalld.service
systemctl disable firewalld.service
Comment 5 Rémi G. 2014-04-26 09:08:47 UTC
Thank you for your prompt reply. Indeed a new error message will be better and help users find a solution if they really need the service. I have not enough knowledge to try the patch but you don't need my feedback I guess ;-)

Just curious though, what makes it so complicated (or currently impossible) to solve the problem? I have noticed with netstat that streams use random ports (I wanted to know which one I should open in the firewall).

If you don't have time to answer, I would understand. Keep up the good work, this new version of Totem is awesome !
Comment 6 Bastien Nocera 2014-04-30 11:26:29 UTC
Attachment 275030 [details] pushed as 2f3512c - backend: Better error message for RTSP blocked by firewall
Comment 7 Bastien Nocera 2014-04-30 12:47:04 UTC
(In reply to comment #5)
> Thank you for your prompt reply. Indeed a new error message will be better and
> help users find a solution if they really need the service. I have not enough
> knowledge to try the patch but you don't need my feedback I guess ;-)

I tested it locally, and it seems to work.

> Just curious though, what makes it so complicated (or currently impossible) to
> solve the problem? I have noticed with netstat that streams use random ports (I
> wanted to know which one I should open in the firewall).

RTSP uses random ports on the machine for the server to connect to. See for example this KBase about Windows:
http://support.microsoft.com/kb/883831

This is a problem that will need solving when we rework the firewall for the next version of Fedora though.

> If you don't have time to answer, I would understand. Keep up the good work,
> this new version of Totem is awesome !

Thanks :)