backend: Better error message for RTSP blocked by firewall

https://bugzilla.gnome.org/show_bug.cgi?id=728789